# readme-generator

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: exceptions.py  main.py
app/api/routes/: generate.py  health.py
app/core/: config.py  logging.py
app/models/: schemas.py
app/services/: ai_service.py  generation_service.py
app/static/: index.html
tests/: conftest.py  test_generate.py  test_health.py
